WebGL and debug performance sprite

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div id="openfl-content"></div>
 	
 	<script type="text/javascript">
-		lime.embed ("openfl-content", 0, 0, "FFFFFF");
+		ModestMapsSample.embed ("openfl-content", 0, 0, "FFFFFF");
 	</script>
 	
 </body>
