--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>ModestMapsSample</title>
+	<title>WebGL sample</title>
 	
 	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	
 	
 	<link rel="shortcut icon" type="image/png" href="./favicon.png">
-	
-	
-	<script type="text/javascript" src="./lib/howler.min.js"></script>
-	<script type="text/javascript" src="./lib/pako.min.js"></script>
 	<script type="text/javascript" src="./ModestMapsSample.js"></script>
 	
 	<script>
